--- a/WaterstonBot/package.json
+++ b/WaterstonBot/package.json
@@ -7,11 +7,15 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "ascii-table": "0.0.9",
     "common-tags": "^1.8.0",
     "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0"
-  }
+    "dotenv": "^8.2.0",
+    "node-superfetch": "^0.1.10",
+    "quick.db": "^7.1.1"
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
