Added a start + lint script and desc

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start:" "node ."
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +19,5 @@
   },
   "devDependencies": {},
   "keywords": [],
-  "description": ""
+  "description": "WaterstonSystem, the custom Discord bot for Roblox verification and moderation."
 }
