--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "node-superfetch": "^0.1.10",
-    "quick.db": "^7.1.1",
-    "ms": "2.1.2"
+    "quick.db": "^7.1.1"
     
   },
   "devDependencies": {},
