--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
 		"common-tags": "^1.8.0",
 		"discord.js": "^12.3.1",
 		"dotenv": "^8.2.0",
+		"mongoose": "^5.10.6",
 		"ms": "^2.1.2",
 		"node-superfetch": "^0.1.10",
-		"quick.db": "^7.1.1"
+		"quick.db": "^7.1.2"
 	},
 	"devDependencies": {},
 	"keywords": [],
