--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Waterston/WaterstonSystems"
-	  },
+	},
 	"bugs": "https://github.com/Waterston/WaterstonSystems/issues",
 	"author": "Bandelqs, TheRealPear",
 	"license": "ISC",
@@ -25,8 +25,7 @@
 		"dotenv": "^8.2.0",
 		"mongoose": "^5.10.13",
 		"ms": "^2.1.2",
-		"node-superfetch": "^0.1.10",
-		"quick.db": "^7.1.3"
+		"node-superfetch": "^0.1.10"
 	},
 	"devDependencies": {},
 	"keywords": []
