--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"url": "https://github.com/Waterston/WaterstonSystems"
 	},
 	"bugs": "https://github.com/Waterston/WaterstonSystems/issues",
-	"author": "Bandelqs, TheRealPear, R_udy",
+	"author": "Bandelqs, TheRealPear",
 	"license": "ISC",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
@@ -23,7 +23,7 @@
 		"common-tags": "^1.8.0",
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
-		"mongoose": "^5.11.8",
+		"mongoose": "^5.11.13",
 		"ms": "^2.1.3",
 		"node-superfetch": "^0.1.10",
 		"quick.db": "^7.1.2"
