--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,10 @@
-# Basic dependabot.yml file with
-# minimum configuration for npm
+# Basic set up for three package managers
+
 version: 2
 updates:
-# Enable version updates for npm
-- package-ecosystem: npm
-# Look for `package.json` and `lock` files in the `root` directory
-directory: "/"
-# Check the npm registry for updates every day (weekdays)
-schedule:
-interval: daily
 
-open-pull-requests-limit: 99
+  # Maintain dependencies for npm
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "daily"
